examples/datalog/18_advanced_patterns/37_most_common.dl
% Test: Most common value pattern
% Expected: Find most frequent value
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_most_common
.kg use test_most_common

+events[("click",), ("view",), ("click",), ("purchase",), ("click",), ("view",)].

% Count by event type
+event_counts(Event, <COUNT:Event>) :- events(Event).

?- event_counts(Event, Count).

% Get max count
+max_count(<MAX:Count>) :- event_counts(_, Count).

?- max_count(M).

.kg use default
.kg drop test_most_common
